--- a/src/filter/tests/CMakeLists.txt
+++ b/src/filter/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ ecm_mark_as_test(filterimporterexportergui)
 target_link_libraries(filterimporterexportergui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
 )
 
@@ -14,7 +14,7 @@ ecm_mark_as_test(invalidfilterdialoggui)
 target_link_libraries(invalidfilterdialoggui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
 )
 
@@ -23,7 +23,7 @@ ecm_mark_as_test(kmfilterdialogtestgui)
 target_link_libraries(kmfilterdialogtestgui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
 )
 
@@ -32,7 +32,7 @@ ecm_mark_as_test(filteractionmissingsoundurldialogui)
 target_link_libraries(filteractionmissingsoundurldialogui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
   KF${KF_MAJOR_VERSION}::KIOWidgets
 )
@@ -42,7 +42,7 @@ ecm_mark_as_test(filteractionmissingtemplatedialoggui)
 target_link_libraries(filteractionmissingtemplatedialoggui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
   KF${KF_MAJOR_VERSION}::Completion
 )
@@ -52,7 +52,7 @@ ecm_mark_as_test(filteractionmissingtransportdialoggui)
 target_link_libraries(filteractionmissingtransportdialoggui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
   KF${KF_MAJOR_VERSION}::Completion
   KF5::MailTransport
@@ -63,7 +63,7 @@ ecm_mark_as_test(filteractionmissingaccountdialoggui)
 target_link_libraries(filteractionmissingaccountdialoggui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
   KF${KF_MAJOR_VERSION}::Completion
 )
@@ -73,7 +73,7 @@ ecm_mark_as_test(filteractionmissingtagdialoggui)
 target_link_libraries(filteractionmissingtagdialoggui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
   KF${KF_MAJOR_VERSION}::Completion
 )
@@ -83,7 +83,7 @@ ecm_mark_as_test(filteractionmissingidentitydialoggui)
 target_link_libraries(filteractionmissingidentitydialoggui
   Qt::Core
   Qt::Gui
-  KF5::MailCommon
+  KPim${KF_MAJOR_VERSION}::MailCommon
   KF${KF_MAJOR_VERSION}::I18n
   KF${KF_MAJOR_VERSION}::Completion
 )
