--- a/src/filter/autotests/CMakeLists.txt
+++ b/src/filter/autotests/CMakeLists.txt
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileCopyrightText: none
 set(mailcommon_filter_test_LIBS Qt::Test Qt::Gui KF5::AkonadiCore KF5::AkonadiMime
-                                KF5::MailCommon KF5::PimCommon Phonon::phonon4qt${QT_MAJOR_VERSION}
+                                KPim${KF_MAJOR_VERSION}::MailCommon KF5::PimCommon Phonon::phonon4qt${QT_MAJOR_VERSION}
                                 KF${KF_MAJOR_VERSION}::KIOWidgets KF${KF_MAJOR_VERSION}::IconThemes KF5::TemplateParser
                                 KF5::MailTransport KF${KF_MAJOR_VERSION}::I18n KF${KF_MAJOR_VERSION}::SyntaxHighlighting KF${KF_MAJOR_VERSION}::Codecs
 )
