--- a/KPimMailCommonConfig.cmake.in
+++ b/KPimMailCommonConfig.cmake.in
@@ -17,3 +17,4 @@ if (@MAILCOMMON_KF5_COMPAT@)
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/KPim@KF_MAJOR_VERSION@MailCommonTargets.cmake")
+@PACKAGE_INCLUDE_QCHTARGETS@
