--- a/KPimMailCommonConfig.cmake.in
+++ b/KPimMailCommonConfig.cmake.in
@@ -1,6 +1,6 @@
 @PACKAGE_INIT@
 include(CMakeFindDependencyMacro)
-find_dependency(KF5Akonadi "@AKONADI_VERSION@")
+find_dependency(KPim@KF_MAJOR_VERSION@Akonadi "@AKONADI_VERSION@")
 find_dependency(KPim@KF_MAJOR_VERSION@AkonadiMime "@AKONADIMIME_LIB_VERSION@")
 find_dependency(KPim@KF_MAJOR_VERSION@Libkdepim "@LIBKDEPIM_LIB_VERSION@")
 find_dependency(KPim@KF_MAJOR_VERSION@MessageComposer "@MESSAGELIB_LIB_VERSION@")
